--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,12 @@ matrix:
     python: "3.6"
     dist: xenial
   - os: linux
+    env: ELECTRUM_MAINNET=true
+    python: "3.7"
+    dist: xenial
+  - if: tag =~ .+
+    os: linux
+    env: ELECTRUM_MAINNET=false
     python: "3.7"
     dist: xenial
 before_install:
@@ -50,7 +56,7 @@ script:
       ./build/travis-build-linux.sh;
   fi
 - if [[ -n $TRAVIS_TAG ]] && [[ $TRAVIS_OS_NAME == 'linux' ]] && [[ $TRAVIS_PYTHON_VERSION == '3.7' ]]; then
-      ./build/travis-build-linux-apk.sh;
+     travis_wait 30 ./build/travis-build-linux-apk.sh;
   fi
 deploy:
 - provider: releases
@@ -72,6 +78,7 @@ deploy:
   - build/electrum-axe/dist/Axe-Electrum-$AXE_ELECTRUM_VERSION-setup-win32.exe
   - build/electrum-axe/dist/Axe-Electrum-$AXE_ELECTRUM_VERSION-setup-win64.exe
   - build/electrum-axe/bin/Electrum_AXE-$AXE_ELECTRUM_APK_VERSION-release-unsigned.apk
+  - build/electrum-axe/bin/Electrum_AXE_Testnet-$AXE_ELECTRUM_APK_VERSION-release-unsigned.apk
   on:
     repo: AXErunners/electrum-axe
     tags: true
