--- a/contrib/axe/travis/Dockerfile-kivy
+++ b/contrib/axe/travis/Dockerfile-kivy
@@ -1,5 +1,5 @@
 FROM ubuntu:18.04
-LABEL maintainer "AXErunners"
+LABEL maintainer "Andriy Khavryuchenko <akhavr@khavr.com>"
 
 ENV LANG="en_US.UTF-8" \
     LANGUAGE="en_US.UTF-8" \
@@ -51,11 +51,12 @@ RUN dpkg --add-architecture i386 \
         libswscale-dev \
         libavformat-dev \
         libavcodec-dev \
+        libgmp-dev \
     && locale-gen en_US.UTF-8 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py \
-    && pip3 install --upgrade setuptools cython==0.28.6 image
+    && pip3 install --upgrade setuptools cython==0.29.9 image
 
 RUN git config --global user.email "buildozer@example.com" \
     && git config --global user.name "Buildozer"
@@ -72,14 +73,14 @@ RUN cd ${OPTDIR} \
     && git remote add sombernight \
         https://github.com/SomberNight/python-for-android \
     && git fetch --all \
-    && git checkout dec1badc3bd134a9a1c69275339423a95d63413e \
+    && git checkout ccb0f8e1bab36f1b7d1508216b4b4afb076e614f \
     && git cherry-pick d7f722e4e5d4b3e6f5b1733c95e6a433f78ee570 \
-    && git cherry-pick a607f4a446773ac0b0a5150171092b0617fbe670 \
+    && git cherry-pick ed20e196fbcdce718a180f88f23bb2d165c4c5d8 \
     && python3 -m pip install -e . \
     && cd ${OPTDIR} \
     && git clone https://github.com/kivy/buildozer \
     && cd buildozer \
-    && git checkout 6142acfa40cf9a225644470e5410333c35a3bc4a \
+    && git checkout 678b1bf52cf63daa51b06e86a43ea4e2ea8a0b24 \
     && python3 -m pip install -e .
 
 RUN cd ${OPTDIR} \
