--- a/contrib/axe/travis/Dockerfile-wine
+++ b/contrib/axe/travis/Dockerfile-wine
@@ -1,5 +1,5 @@
 FROM ubuntu:18.04
-LABEL maintainer "AXErunners"
+LABEL maintainer "Andriy Khavryuchenko <akhavr@khavr.com>"
 
 USER root
 WORKDIR /root
