--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends:
  python3-bls (>= 0.1.8),
  python3-pyqt5,
 Standards-Version: 4.1.3
-Homepage: http://electrum.axe.org/
+Homepage: http://axerunners.com/
 X-Python3-Version: >= 3.6
 
 Package: python3-electrum-axe
