--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ electrum_axe/gui/kivy/theming/light-0.png
 electrum_axe/gui/kivy/theming/light-1.png
 electrum_axe/gui/kivy/theming/light.atlas
 *.egg-info/
+axe-runners.jks
